# lrauv_backseat_python_template

./: .gitignore  README.md  build.sh  cleanup.sh  cycle.sh  install.sh  pyproject.toml  setup.cfg
backseat_app/: main.py
backseat_app/config/: app_cfg.yaml
