[metadata]
name = backseat_app
version = 0.1.0

[options]
packages = 
    backseat_app
    backseat_app.config
install_requires =
    empy
    numpy
    scipy
    lcm
    h5py
    netCDF4
    pandas
    PyYAML
    setuptools
zip_safe = False
include_package_data = True

[options.entry_points]
console_scripts =
    backseat_app = backseat_app.main:main
